packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_derived_signals_multiple_children.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 2918
expression: output
---
==INPUT==


import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<div>First text</div>
			<div>First {`text`}</div>
			<div>First {1}</div>
			<div>First {true}</div>
			<div>First {`text${12}`}</div>
			<div>First {typeof `text${12}` === 'string' ? 12 : 43}</div>
			<div>First {signal}</div>
			<div>First {signal.value}</div>
			<div>First {12 + signal.value}</div>
			<div>First {store.address.city.name}</div>
			<div>First {store.address.city.name ? 'true' : 'false'}</div>
			<div>First {dep}</div>
			<div>First {dep.thing}</div>
			<div>First {dep.thing + 'stuff'}</div>
			<div>First {globalThing}</div>
			<div>First {globalThing.thing}</div>
			<div>First {globalThing.thing + 'stuff'}</div>
			<div>First {signal.value()}</div>
			<div>First {signal.value + unknown()}</div>
			<div>First {mutable(signal)}</div>
			<div>First {signal.value + dep}</div>
		</>
	);
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { _fnSignal } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore, mutable } from '@qwik.dev/core';
import { dep } from './file';
//
const _hf0 = (p0)=>12 + p0.value;
const _hf0_str = "12+p0.value";
const _hf1 = (p0)=>p0.address.city.name;
const _hf1_str = "p0.address.city.name";
const _hf2 = (p0)=>p0.address.city.name ? 'true' : 'false';
const _hf2_str = 'p0.address.city.name?"true":"false"';
const App_component_ckEPmXZlub0 = ()=>{
    const signal = useSignal(0);
    const store = useStore({});
    return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
        /*#__PURE__*/ _jsxSorted("div", null, null, "First text", 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            `text`
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            1
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            true
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            `text${12}`
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            typeof `text${12}` === 'string' ? 12 : 43
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _wrapProp(signal)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _fnSignal(_hf0, [
                signal
            ], _hf0_str)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _fnSignal(_hf1, [
                store
            ], _hf1_str)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            _fnSignal(_hf2, [
                store
            ], _hf2_str)
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            dep
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            dep.thing
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            dep.thing + 'stuff'
        ], 3, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            globalThing
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            globalThing.thing
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            globalThing.thing + 'stuff'
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal.value()
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal.value + unknown()
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            mutable(signal)
        ], 1, null),
        /*#__PURE__*/ _jsxSorted("div", null, null, [
            "First ",
            signal.value + dep
        ], 1, null)
    ], 1, "u6_0");
};
//
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ inlinedQrl(App_component_ckEPmXZlub0, "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;AACA,SAAqB,QAAQ,EAAE,OAAO,QAAQ,iBAAiB;AAE/D,SAAQ,GAAG,QAAO,SAAS;;mBAeZ,KAAK,GAAO,KAAK;;mBACjB,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI;;mBACvB,GAAM,OAAO,CAAC,IAAI,CAAC,IAAI,GAAG,SAAS;;kCAfpB;IAC7B,MAAM,SAAS,UAAU;IACzB,MAAM,QAAQ,SAAS,CAAC;IACxB,qBACC;sBACC,WAAC,mBAAI;sBACL,WAAC;YAAI;YAAO,CAAC,IAAI,CAAC;;sBAClB,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO,CAAC,IAAI,EAAE,IAAI;;sBACvB,WAAC;YAAI;YAAO,OAAO,CAAC,IAAI,EAAE,IAAI,KAAK,WAAW,KAAK;;sBACnD,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;sBAAO;;sBACZ,WAAC;YAAI;;;;;sBACL,WAAC;YAAI;;;;;sBACL,WAAC;YAAI;;;;;sBACL,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO,IAAI,KAAK;;sBACrB,WAAC;YAAI;YAAO,IAAI,KAAK,GAAG;;sBACxB,WAAC;YAAI;YAAO;;sBACZ,WAAC;YAAI;YAAO,YAAY,KAAK;;sBAC7B,WAAC;YAAI;YAAO,YAAY,KAAK,GAAG;;sBAChC,WAAC;YAAI;YAAO,OAAO,KAAK;;sBACxB,WAAC;YAAI;YAAO,OAAO,KAAK,GAAG;;sBAC3B,WAAC;YAAI;YAAO,QAAQ;;sBACpB,WAAC;YAAI;YAAO,OAAO,KAAK,GAAG;;;AAG9B;;;;AA5BA,OAAO,MAAM,oBAAM,6CA4BhB\"}")
== DIAGNOSTICS ==

[]
