packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_functional_component_capture_props.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 389
expression: output
---
==INPUT==


import { $, component$, useStore } from '@qwik.dev/core';

export const App = component$(({count, rest: [I2, {I3, v1: [I4], I5=v2, ...I6}, I7=v3, ...I8]}) => {
	const state = useStore({count: 0});
	const {rest: [C2, {C3, v1: [C4], C5=v2, ...C6}, C7=v3, ...C8]} = foo();
	return $(() => {
		return (
			<div onClick$={() => state.count += count + total }>
				{I2}{I3}{I4}{I5}{I6}{I7}{I8}
				{C2}{C3}{C4}{C5}{C6}{C7}{C8}
				{v1}{v2}{v3}
			</div>
		)
	});
})

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_ckEPmXZlub0 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_ckEPmXZlub0"), "App_component_ckEPmXZlub0");
//
export const App = /*#__PURE__*/ componentQrl(_qrl_App_component_ckEPmXZlub0);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,OAAO,MAAM,oBAAM,6CAYjB\"}")
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
//
export const App_component_ckEPmXZlub0 = ({ count, rest: [I2, { I3, v1: [I4], I5 = v2, ...I6 }, I7 = v3, ...I8] })=>{
    const state = useStore({
        count: 0
    });
    const { rest: [C2, { C3, v1: [C4], C5 = v2, ...C6 }, C7 = v3, ...C8] } = foo();
    return /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_1_w0t0o3QMovU"), "App_component_1_w0t0o3QMovU", [
        C2,
        C3,
        C4,
        C5,
        C6,
        C7,
        C8,
        I2,
        I3,
        I4,
        I5,
        I6,
        I7,
        I8,
        count,
        state
    ]);
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;yCAG8B,CAAC,EAAC,KAAK,EAAE,MAAM,CAAC,IAAI,EAAC,EAAE,EAAE,IAAI,CAAC,GAAG,EAAE,KAAG,EAAE,EAAE,GAAG,IAAG,EAAE,KAAG,EAAE,EAAE,GAAG,GAAG,EAAC;IAC7F,MAAM,QAAQ,SAAS;QAAC,OAAO;IAAC;IAChC,MAAM,EAAC,MAAM,CAAC,IAAI,EAAC,EAAE,EAAE,IAAI,CAAC,GAAG,EAAE,KAAG,EAAE,EAAE,GAAG,IAAG,EAAE,KAAG,EAAE,EAAE,GAAG,GAAG,EAAC,GAAG;IACjE;;;;;;;;;;;;;;;;;;AASD\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    91,
    460
  ],
  "paramNames": [
    "{count, rest: [I2, {I3, v1: [I4], I5}, ...I8]}"
  ]
}
*/
============================= test.tsx_App_component_div_q_e_click_mi4E1piTWe8.js (ENTRY POINT)==

export const App_component_div_q_e_click_mi4E1piTWe8 = (_, _1, count, state)=>state.count += count + total;


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"uDAQkB,uBAAM,MAAM,KAAK,IAAI,QAAQ\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_q_e_click_mi4E1piTWe8",
  "entry": null,
  "displayName": "test.tsx_App_component_div_q_e_click",
  "hash": "mi4E1piTWe8",
  "canonicalFilename": "test.tsx_App_component_div_q_e_click_mi4E1piTWe8",
  "path": "",
  "extension": "js",
  "parent": "App_component_1_w0t0o3QMovU",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    319,
    353
  ],
  "paramNames": [
    "_",
    "_1",
    "count",
    "state"
  ]
}
*/
============================= test.tsx_App_component_1_w0t0o3QMovU.js (ENTRY POINT)==

import { _captures } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const _qrl_App_component_div_q_e_click_mi4E1piTWe8 = /*#__PURE__*/ qrl(()=>import("./test.tsx_App_component_div_q_e_click_mi4E1piTWe8"), "App_component_div_q_e_click_mi4E1piTWe8");
//
export const App_component_1_w0t0o3QMovU = ()=>{
    const C2 = _captures[0], C3 = _captures[1], C4 = _captures[2], C5 = _captures[3], C6 = _captures[4], C7 = _captures[5], C8 = _captures[6], I2 = _captures[7], I3 = _captures[8], I4 = _captures[9], I5 = _captures[10], I6 = _captures[11], I7 = _captures[12], I8 = _captures[13], count = _captures[14], state = _captures[15];
    return /*#__PURE__*/ _jsxSorted("div", {
        "q-e:click": _qrl_App_component_div_q_e_click_mi4E1piTWe8,
        "q:ps": [
            count,
            state
        ]
    }, null, [
        I2,
        I3,
        I4,
        I5,
        I6,
        I7,
        I8,
        C2,
        C3,
        C4,
        C5,
        C6,
        C7,
        C8,
        v1,
        v2,
        v3
    ], 4, "u6_0");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;2CAMU;;IACR,qBACC,WAAC;QAAI,WAAQ;;;;;;QACX;QAAI;QAAI;QAAI;QAAI;QAAI;QAAI;QACxB;QAAI;QAAI;QAAI;QAAI;QAAI;QAAI;QACxB;QAAI;QAAI\"}")
/*
{
  "origin": "test.tsx",
  "name": "App_component_1_w0t0o3QMovU",
  "entry": null,
  "displayName": "test.tsx_App_component_1",
  "hash": "w0t0o3QMovU",
  "canonicalFilename": "test.tsx_App_component_1_w0t0o3QMovU",
  "path": "",
  "extension": "js",
  "parent": "App_component_ckEPmXZlub0",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": true,
  "loc": [
    282,
    456
  ],
  "captureNames": [
    "C2",
    "C3",
    "C4",
    "C5",
    "C6",
    "C7",
    "C8",
    "I2",
    "I3",
    "I4",
    "I5",
    "I6",
    "I7",
    "I8",
    "count",
    "state"
  ]
}
*/
== DIAGNOSTICS ==

[]
