packages/qwik/src/optimizer/core/src/snapshots/qwik_core__test__example_inlined_entry_strategy.snap
---
source: packages/qwik/src/optimizer/core/src/test.rs
assertion_line: 1516
expression: output
---
==INPUT==


import { component$, useBrowserVisibleTask$, useStore, useStyles$ } from '@qwik.dev/core';
import { thing } from './sibling';
import mongodb from 'mongodb';

export const Child = component$(() => {

	useStyles$('somestring');
	const state = useStore({
		count: 0
	});

	// Double count watch
	useBrowserVisibleTask$(() => {
		state.count = thing.doStuff() + import("./sibling");
	});

	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});


============================= test.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { useStylesQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { useBrowserVisibleTaskQrl } from "@qwik.dev/core";
import { _captures } from "@qwik.dev/core";
import { useStore } from '@qwik.dev/core';
import { thing } from './sibling';
import mongodb from 'mongodb';
//
const Child_component_div_q_e_click_cROa4sult1s = ()=>console.log(mongodb);
const Child_component_useBrowserVisibleTask_0IGFPOyJmQA = ()=>{
    const state = _captures[0];
    state.count = thing.doStuff() + import("./sibling");
};
const Child_component_useStyles_qBZTuFM0160 = 'somestring';
//
const _qrl_Child_component_div_q_e_click_cROa4sult1s = /*#__PURE__*/ inlinedQrl(Child_component_div_q_e_click_cROa4sult1s, "Child_component_div_q_e_click_cROa4sult1s");
const _qrl_Child_component_useBrowserVisibleTask_0IGFPOyJmQA = /*#__PURE__*/ inlinedQrl(Child_component_useBrowserVisibleTask_0IGFPOyJmQA, "Child_component_useBrowserVisibleTask_0IGFPOyJmQA");
const _qrl_Child_component_useStyles_qBZTuFM0160 = /*#__PURE__*/ inlinedQrl(Child_component_useStyles_qBZTuFM0160, "Child_component_useStyles_qBZTuFM0160");
//
const Child_component_9GyF01GDKqw = ()=>{
    useStylesQrl(_qrl_Child_component_useStyles_qBZTuFM0160);
    const state = useStore({
        count: 0
    });
    // Double count watch
    useBrowserVisibleTaskQrl(_qrl_Child_component_useBrowserVisibleTask_0IGFPOyJmQA.$withCaptures$([
        state
    ]));
    return <div q-e:click={_qrl_Child_component_div_q_e_click_cROa4sult1s}>
		</div>;
};
//
const _qrl_Child_component_9GyF01GDKqw = /*#__PURE__*/ inlinedQrl(Child_component_9GyF01GDKqw, "Child_component_9GyF01GDKqw");
//
export const Child = /*#__PURE__*/ componentQrl(_qrl_Child_component_9GyF01GDKqw);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AACA,SAA6C,QAAQ,QAAoB,iBAAiB;AAC1F,SAAS,KAAK,QAAQ,YAAY;AAClC,OAAO,aAAa,UAAU;;kDAeb,IAAM,QAAQ,GAAG,CAAC;0DALX;;IACtB,MAAM,KAAK,GAAG,MAAM,OAAO,KAAK,MAAM,CAAC;;8CAP7B;;;;;;oCAFoB;IAE/B;IACA,MAAM,QAAQ,SAAS;QACtB,OAAO;IACR;IAEA,qBAAqB;IACrB;;;IAIA,QACE,IAAI,2DAAsC;EAC3C,EAAE;AAEJ;;;;AAhBA,OAAO,MAAM,sBAAQ,+CAgBlB\"}")
== DIAGNOSTICS ==

[]
